Create the -second variation to Title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body> 
         <header class="header">
-            <h1>AP</h1>
+            <img src="./assets/img/logo2.png" width="60px"; height="60px">
             <nav> 
                 <a class="action" href="" lang="en">Skills</a>
                 <a class="action" href="">Projetos</a>
@@ -30,16 +30,20 @@
             </nav>
         </header>
 
-        <section class="banner">  
-            <div class="box"> 
-                <h1 class="title">Alanna Paiva</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2> 
-            </div>
-        
-            <a class="button" href="" lang="en">Download CV </a>
-            <a class="button" href="" lang="en">Contatos</a>
+        <section class="banner">
+            <div class="wrapper">
+                <div class="box"> 
+                    <h1 class="title">Alanna Paiva</h1>
+                    <h2 class="subtitle">FrontEnd Developer</h2> 
+                </div>
+                
+                <div class="navigation"> 
+                    <a class="button" href="" lang="en">Download CV </a>
+                    <a class="button" href="" lang="en">Contatos</a>
+                </div>
+            </div>  
         </section>
-
+        <h2 class="title -second">Skills</h2>
     </body>
 
 </html>
