--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/components/header.css">
         <link rel="stylesheet" href="./css/components/banner.css">
+        <link rel="stylesheet" href="./css/components/section.css">
         <link rel="stylesheet" href="./css/components/button.css">
         <link rel="stylesheet" href="./css/components/title.css">
         <link rel="stylesheet" href="./css/components/subtitle.css">
@@ -43,7 +44,10 @@
                 </div>
             </div>  
         </section>
-        <h2 class="title -second">Skills</h2>
+
+        <section class="section"> 
+            <h2 class="title -second">Skills</h2>
+        </section>
     </body>
 
 </html>
