--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <link rel="stylesheet" href="./css/components/banner.css">
         <link rel="stylesheet" href="./css/components/section.css">
         <link rel="stylesheet" href="./css/components/button.css">
-        <link rel="stylesheet" href="./css/components/title.css">
+        <link rel="stylesheet" href="./css/components/main-title.css">
         <link rel="stylesheet" href="./css/components/subtitle.css">
         <link rel="stylesheet" href="./css/components/box.css">
         <link rel="stylesheet" href="./css/components/action.css">
-     
- 
+        <link rel="stylesheet" href="./css/components/skill-tec.css">
+        <link rel="stylesheet" href="./css/components/progress-bar.css">
+
         <title>Alanna Paiva</title>
     </head>
 
@@ -34,7 +35,7 @@
         <section class="banner">
             <div class="wrapper">
                 <div class="box"> 
-                    <h1 class="title">Alanna Paiva</h1>
+                    <h1 class="main-title">Alanna Paiva</h1>
                     <h2 class="subtitle">FrontEnd Developer</h2> 
                 </div>
                 
@@ -46,10 +47,18 @@
         </section>
 
         <section class="section"> 
-            <h2 class="title -second">Skills</h2>
+            <h2 class="main-title -second">Skills</h2>
+
+            <article class="skill-tec">
+                <img class = "icon" src="./assets/img/ico_html5.png" alt="logo do html 5 em pixel art">
+                <div class="right"> 
+                    <h3 class="title">HTML</h3>
+                    <progress class = "progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+                </div>
+            </article>
         </section>
     </body>
 
 </html>
-
-
