--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <link rel="stylesheet" href="./css/components/subtitle.css">
         <link rel="stylesheet" href="./css/components/box.css">
         <link rel="stylesheet" href="./css/components/action.css">
+        <link rel="stylesheet" href="./css/components/wrapper-skill.css">
         <link rel="stylesheet" href="./css/components/skill-tec.css">
         <link rel="stylesheet" href="./css/components/progress-bar.css">
+        <link rel="stylesheet" href="./css/components/card-project.css">
 
         <title>Alanna Paiva</title>
     </head>
@@ -48,16 +50,73 @@
 
         <section class="section"> 
             <h2 class="main-title -second">Skills</h2>
-
-            <article class="skill-tec">
-                <img class = "icon" src="./assets/img/ico_html5.png" alt="logo do html 5 em pixel art">
-                <div class="right"> 
-                    <h3 class="title">HTML</h3>
-                    <progress class = "progress-bar" max="100" value="70">
-                        70%
-                    </progress>
-                </div>
-            </article>
+            <div class="wrapper-skill">
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/ico_html5.png" alt="logo do html 5 em pixel art">
+                    <div class="right"> 
+                        <h3 class="title">HTML</h3>
+                        <progress class = "progress-bar" max="100" value="50">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/python.png" width="80.27px" height="90px" alt="logo do python">
+                    <div class="right"> 
+                        <h3 class="title">Pyhton</h3>
+                        <progress class = "progress-bar" max="100" value="20">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/ico_css3.png" alt="logo do css 3 em pixel art">
+                    <div class="right"> 
+                        <h3 class="title">CSS</h3>
+                        <progress class = "progress-bar" max="100" value="50">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/c.png" width="80.27px" height="90px" alt="logo da linguagem C">
+                    <div class="right"> 
+                        <h3 class="title">C</h3>
+                        <progress class = "progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/ico_js.png" alt="logo do JavaScript em pixel art">
+                    <div class="right"> 
+                        <h3 class="title">JS</h3>
+                        <progress class = "progress-bar" max="100" value="30">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+                <article class="skill-tec">
+                    <img class = "icon" src="./assets/img/ico_ux.png" alt="logo da UX ">
+                    <div class="right"> 
+                        <h3 class="title">UX</h3>
+                        <progress class = "progress-bar" max="100" value="30">
+                            20%
+                        </progress>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section color: #000>
+            <figure class="card-project">
+                <img class="logo" src="/assets/img/logo-firedlabs.png" alt="logo da firedlabs">
+            </figure>
+            <figure class="card-project -blue">
+                <img class="logo" src="/assets/img/logo-collabcode.png" alt="logo da Collab">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="/assets/img/portfolio.png" alt="logo pessoal">
+            </figure>
         </section>
     </body>
 
