Create the wrapper-card component

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="./css/components/skill-tec.css">
         <link rel="stylesheet" href="./css/components/progress-bar.css">
         <link rel="stylesheet" href="./css/components/card-project.css">
+        <link rel="stylesheet" href="./css/components/wrapper-card.css">
 
         <title>Alanna Paiva</title>
     </head>
@@ -107,16 +108,20 @@
                 </article>
             </div>
         </section>
-        <section color: #000>
-            <figure class="card-project">
-                <img class="logo" src="/assets/img/logo-firedlabs.png" alt="logo da firedlabs">
-            </figure>
-            <figure class="card-project -blue">
-                <img class="logo" src="/assets/img/logo-collabcode.png" alt="logo da Collab">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="/assets/img/portfolio.png" alt="logo pessoal">
-            </figure>
+        <section class="section -bgBlack -bdFirst">
+            <h2 class="main-title -second">Projetos</h2>
+
+            <div class="wrapper-card"> 
+                <figure class="card-project">
+                    <img class="logo" src="/assets/img/logo-firedlabs.png" alt="logo da firedlabs">
+                </figure>
+                <figure class="card-project -blue">
+                    <img class="logo" src="/assets/img/logo-collabcode.png" alt="logo da Collab">
+                </figure>
+                <figure class="card-project">
+                    <img class="logo" src="/assets/img/portfolio.png" alt="logo pessoal">
+                </figure>
+            </div>
         </section>
     </body>
 
