--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body> 
         <header class="header">
-            <img src="./assets/img/logo2.png" width="60px"; height="60px">
+            <img src="./assets/img/banner/logo2.png" width="60px"; height="60px">
             <nav> 
                 <a class="action" href="" lang="en">Skills</a>
                 <a class="action" href="">Projetos</a>
@@ -48,12 +48,11 @@
                 </div>
             </div>  
         </section>
-
         <section class="section"> 
             <h2 class="main-title -second">Skills</h2>
             <div class="wrapper-skill">
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/ico_html5.png" alt="logo do html 5 em pixel art">
+                    <img class = "icon" src="./assets/img/skills/ico_html5.png" alt="logo do html 5 em pixel art">
                     <div class="right"> 
                         <h3 class="title">HTML</h3>
                         <progress class = "progress-bar" max="100" value="50">
@@ -62,7 +61,7 @@
                     </div>
                 </article>
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/python.png" width="80.27px" height="90px" alt="logo do python">
+                    <img class = "icon" src="./assets/img/skills/python.png" width="80.27px" height="90px" alt="logo do python">
                     <div class="right"> 
                         <h3 class="title">Pyhton</h3>
                         <progress class = "progress-bar" max="100" value="20">
@@ -71,7 +70,7 @@
                     </div>
                 </article>
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/ico_css3.png" alt="logo do css 3 em pixel art">
+                    <img class = "icon" src="./assets/img/skills/ico_css3.png" alt="logo do css 3 em pixel art">
                     <div class="right"> 
                         <h3 class="title">CSS</h3>
                         <progress class = "progress-bar" max="100" value="50">
@@ -80,7 +79,7 @@
                     </div>
                 </article>
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/c.png" width="80.27px" height="90px" alt="logo da linguagem C">
+                    <img class = "icon" src="./assets/img/skills/c.png" width="80.27px" height="90px" alt="logo da linguagem C">
                     <div class="right"> 
                         <h3 class="title">C</h3>
                         <progress class = "progress-bar" max="100" value="70">
@@ -89,7 +88,7 @@
                     </div>
                 </article>
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/ico_js.png" alt="logo do JavaScript em pixel art">
+                    <img class = "icon" src="./assets/img/skills/ico_js.png" alt="logo do JavaScript em pixel art">
                     <div class="right"> 
                         <h3 class="title">JS</h3>
                         <progress class = "progress-bar" max="100" value="30">
@@ -98,7 +97,7 @@
                     </div>
                 </article>
                 <article class="skill-tec">
-                    <img class = "icon" src="./assets/img/ico_ux.png" alt="logo da UX ">
+                    <img class = "icon" src="./assets/img/skills/ico_ux.png" alt="logo da UX ">
                     <div class="right"> 
                         <h3 class="title">UX</h3>
                         <progress class = "progress-bar" max="100" value="30">
@@ -113,13 +112,13 @@
 
             <div class="wrapper-card"> 
                 <figure class="card-project">
-                    <img class="logo" src="/assets/img/logo-firedlabs.png" alt="logo da firedlabs">
+                    <img class="logo" src="/assets/img/projetos/logo-firedlabs.png" alt="logo da firedlabs">
                 </figure>
                 <figure class="card-project -blue">
-                    <img class="logo" src="/assets/img/logo-collabcode.png" alt="logo da Collab">
+                    <img class="logo" src="/assets/img/projetos/logo-collabcode.png" alt="logo da Collab">
                 </figure>
                 <figure class="card-project">
-                    <img class="logo" src="/assets/img/portfolio.png" alt="logo pessoal">
+                    <img class="logo" src="/assets/img/projetos/portfolio.png" alt="logo pessoal">
                 </figure>
             </div>
         </section>
