--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="./css/components/main-title.css">
         <link rel="stylesheet" href="./css/components/subtitle.css">
         <link rel="stylesheet" href="./css/components/box.css">
-        <link rel="stylesheet" href="./css/components/action.css">
+        <link rel="stylesheet" href="./css/components/main-action.css">
         <link rel="stylesheet" href="./css/components/wrapper-skill.css">
         <link rel="stylesheet" href="./css/components/skill-tec.css">
         <link rel="stylesheet" href="./css/components/progress-bar.css">
@@ -27,10 +27,10 @@
         <header class="header">
             <img src="./assets/img/banner/logo2.png" width="60px"; height="60px">
             <nav> 
-                <a class="action" href="" lang="en">Skills</a>
-                <a class="action" href="">Projetos</a>
-                <a class="action" href="">Sobre</a>
-                <a class="action" href="">Contatos</a>
+                <a class="main-action" href="" lang="en">Skills</a>
+                <a class="main-action" href="">Projetos</a>
+                <a class="main-action" href="">Sobre</a>
+                <a class="main-action" href="">Contatos</a>
                 <a class="button" href="" lang="en">Download CV </a>
             </nav>
         </header>
@@ -111,15 +111,21 @@
             <h2 class="main-title -second">Projetos</h2>
 
             <div class="wrapper-card"> 
-                <figure class="card-project">
-                    <img class="logo" src="/assets/img/projetos/logo-firedlabs.png" alt="logo da firedlabs">
-                </figure>
-                <figure class="card-project -blue">
-                    <img class="logo" src="/assets/img/projetos/logo-collabcode.png" alt="logo da Collab">
-                </figure>
-                <figure class="card-project">
-                    <img class="logo" src="/assets/img/projetos/portfolio.png" alt="logo pessoal">
-                </figure>
+                <a href="" target="_blank">
+                    <figure class="card-project">
+                        <img class="logo" src="/assets/img/projetos/logo-firedlabs.png" alt="logo da firedlabs">
+                    </figure>
+                </a>
+                <a href="" target="_blank"> 
+                    <figure class="card-project -blue">
+                        <img class="logo" src="/assets/img/projetos/logo-collabcode.png" alt="logo da Collab">
+                    </figure>
+                </a>
+                <a href="" target="_blank">
+                    <figure class="card-project">
+                        <img class="logo" src="/assets/img/projetos/portfolio.png" alt="logo pessoal">
+                    </figure>
+                </a>
             </div>
         </section>
     </body>
