--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/components/main-header.css">
         <link rel="stylesheet" href="./css/components/main-banner.css">
-        <link rel="stylesheet" href="./css/components/section.css">
+        <link rel="stylesheet" href="./css/components/main-section.css">
         <link rel="stylesheet" href="./css/components/main-button.css">
         <link rel="stylesheet" href="./css/components/main-title.css">
         <link rel="stylesheet" href="./css/components/subtitle.css">
@@ -48,7 +48,7 @@
                 </div>
             </div>  
         </section>
-        <section class="section"> 
+        <section class="main-section"> 
             <h2 class="main-title -second">Skills</h2>
             <div class="wrapper-skill">
                 <article class="skill-tec">
@@ -107,7 +107,7 @@
                 </article>
             </div>
         </section>
-        <section class="section -bgBlack -bdFirst">
+        <section class="main-section -bgBlack -bdFirst">
             <h2 class="main-title -second">Projetos</h2>
 
             <div class="wrapper-card"> 
