Create html to the main-input component

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <link rel="stylesheet" href="./css/components/button-arrow.css">
         <link rel="stylesheet" href="./css/components/node-card.css">
         <link rel="stylesheet" href="./css/components/main-carousel.css">
+        <link rel="stylesheet" href="./css/components/main-footer.css">
+        <link rel="stylesheet" href="./css/components/main-label.css">
+        <link rel="stylesheet" href="./css/components/main-input.css">
 
         <title>Alanna Paiva</title>
     </head>
@@ -193,6 +196,37 @@
             Aspirante a  musicista clássica, dançarina de jazz nas horas vagas, graduanda em Engenharia da Computação  na Universidade Federal do Ceará 🎓. Sou uma desenvolvedora iniciante, estou aprendendo sempre um pouco de tudo, viciada em hobbies e atualmente estudando tecnologias para Desenvolvimento Web e um pouco de Python, atuo voluntariamente como Assessora Cultural no Centro Acadêmico e como Monitora de Programação Computacional.
         </p>
     </section>
+
+    <form>
+        <label class="main-label" for="name">Nome</class="main-label" label>
+        <input class="main-input" id="name" type="text"> 
+
+        <label class="main-label" for="email">Email</class="main-label" label>
+        <input  class="main-input" id="email" type="email">
+
+        <label class="main-label" for="message">Mensagem</label>
+        <textarea class="main-input" id="message"></textarea>
+
+        <button type="submit">Enviar</button>
+    </form>
+
+
+    <footer class="main-footer">
+        <a class = "action" href="https://github.com/alannapaiva" target="_blank">
+            <img class="github" src="/assets/img/contatos/github.png" alt="Logo do github">
+        </a>
+        <a class="action" href="https://www.instagram.com/alannapaivaa/" target="_blank">
+            <img class="instagram" src="/assets/img/contatos/instagram.png" alt="Logo do instagram">
+        </a>
+        <a class="action" href="https://codepen.io/paivalanna" target="_blank">
+            <img class="codepen" src="/assets/img/contatos/codepen.png" alt="Logo do CodePen">
+        </a>
+        <a class="action" href="https://www.linkedin.com/in/alanna-paiva-b26881169/" target="_blank">
+            <img class="linkedin" src="/assets/img/contatos/linkedin.png" alt="Logo do LinkedIn">
+        </a>
+    </footer>
+  
+
     <script src="./js/components/main-carousel.js"></script>
 </body>
 </html>
