Create the main-form component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="./css/components/main-footer.css">
         <link rel="stylesheet" href="./css/components/main-label.css">
         <link rel="stylesheet" href="./css/components/main-input.css">
+        <link rel="stylesheet" href="./css/components/main-form.css">
 
         <title>Alanna Paiva</title>
     </head>
@@ -197,11 +198,11 @@
         </p>
     </section>
 
-    <form>
-        <label class="main-label" for="name">Nome</class="main-label" label>
+    <form class="main-form">
+        <label class="main-label" for="name">Nome</label>
         <input class="main-input" id="name" type="text"> 
 
-        <label class="main-label" for="email">Email</class="main-label" label>
+        <label class="main-label" for="email">Email</label>
         <input  class="main-input" id="email" type="email">
 
         <label class="main-label" for="message">Mensagem</label>
