--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
             <div class="wrapper-card"> 
                 <a href="" target="_blank">
                     <figure class="card-project">
-                        <img class="logo" src="/assets/img/projetos/logo-firedlabs.png" alt="logo da firedlabs">
+                        <img class="logo" src="./assets/img/projetos/logo-firedlabs.png" alt="logo da firedlabs">
                     </figure>
                 </a>
                 <a href="" target="_blank"> 
                     <figure class="card-project -blue">
-                        <img class="logo" src="/assets/img/projetos/logo-collabcode.png" alt="logo da Collab">
+                        <img class="logo" src="./assets/img/projetos/logo-collabcode.png" alt="logo da Collab">
                     </figure>
                 </a>
                 <a href="" target="_blank">
                     <figure class="card-project">
-                        <img class="logo" src="/assets/img/projetos/portfolio.png" alt="logo pessoal">
+                        <img class="logo" src="./assets/img/projetos/portfolio.png" alt="logo pessoal">
                     </figure>
                 </a>
             </div>
@@ -216,19 +216,18 @@
 
     <footer class="main-footer">
         <a class = "action" href="https://github.com/alannapaiva" target="_blank">
-            <img class="github" src="/assets/img/contatos/github.png" alt="Logo do github">
+            <img class="github" src="./assets/img/contatos/github.png" alt="Logo do github">
         </a>
         <a class="action" href="https://www.instagram.com/alannapaivaa/" target="_blank">
-            <img class="instagram" src="/assets/img/contatos/instagram.png" alt="Logo do instagram">
+            <img class="instagram" src="./assets/img/contatos/instagram.png" alt="Logo do instagram">
         </a>
         <a class="action" href="https://codepen.io/paivalanna" target="_blank">
-            <img class="codepen" src="/assets/img/contatos/codepen.png" alt="Logo do CodePen">
+            <img class="codepen" src="./assets/img/contatos/codepen.png" alt="Logo do CodePen">
         </a>
         <a class="action" href="https://www.linkedin.com/in/alanna-paiva-b26881169/" target="_blank">
-            <img class="linkedin" src="/assets/img/contatos/linkedin.png" alt="Logo do LinkedIn">
+            <img class="linkedin" src="./assets/img/contatos/linkedin.png" alt="Logo do LinkedIn">
         </a>
     </footer>
-  
 
     <script src="./js/components/main-carousel.js"></script>
 </body>
